# advent_of_code_2021

./: README.md
rust/aoc01/: Cargo.toml
rust/aoc01/src/: main.rs
rust/aoc02/: Cargo.toml
rust/aoc02/src/: main.rs
rust/aoc03/: Cargo.toml
rust/aoc03/src/: main.rs
rust/aoc04/: Cargo.toml
rust/aoc04/src/: main.rs
rust/aoc05/: Cargo.toml
rust/aoc05/src/: main.rs
rust/aoc06/: Cargo.toml
rust/aoc06/src/: main.rs
rust/aoc07/: Cargo.toml
rust/aoc07/src/: main.rs
rust/aoc08/: Cargo.toml
rust/aoc08/src/: main.rs
rust/aoc09/: Cargo.toml
rust/aoc09/src/: main.rs
rust/aoc10/: Cargo.toml
rust/aoc10/src/: main.rs
rust/aoc11/: Cargo.toml
rust/aoc11/src/: main.rs
rust/aoc12/: Cargo.toml
rust/aoc12/src/: main.rs
rust/aoc13/: Cargo.toml
rust/aoc13/src/: main.rs
rust/aoc14/: Cargo.toml
rust/aoc14/src/: main.rs
rust/aoc15/: Cargo.toml
rust/aoc15/src/: main.rs
rust/aoc16/: Cargo.toml
rust/aoc16/src/: main.rs
rust/aoc17/: Cargo.toml
rust/aoc17/src/: main.rs
rust/aoc20/: Cargo.toml
rust/aoc20/src/: main.rs
rust/aoc21/: Cargo.toml
rust/aoc21/src/: main.rs
rust/aoc22/: Cargo.toml
rust/aoc22/src/: main.rs
rust/aoc24/: Cargo.toml
rust/aoc24/src/: main.rs
rust/aoc25/src/: main.rs
rust/benchmark/: Cargo.toml
rust/benchmark/src/: bench.rs  lib.rs
