[package]
name = "benchmark"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc01 = { path = "../aoc01" }
aoc02 = { path = "../aoc02" }
aoc03 = { path = "../aoc03" }
aoc04 = { path = "../aoc04" }
aoc05 = { path = "../aoc05" }

[lib]
name = "benchmark"
path = "src/lib.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"
